syntax = "proto3";

option csharp_namespace = "EchoServiceNamespace";

package EchoService;

service EchoService {
  rpc ProcessEcho (EchoRequest) returns (EchoResponse);
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}
